--- a/style.css
+++ b/style.css
@@ -8,11 +8,15 @@ h1{
   text-align: center;
   
 }
+#container{
+  
+}
 .display{
   width: 33%;
-  height: 40%;
+  height: 300px;
   text-align: center;
   top: 0;
+  display: inline-block;
 }
 #artwork{
   float: left;
